[package]
name = "tracing-file-test"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = "0.24.0"
opentelemetry-appender-log = "0.5.0"
opentelemetry-stdout = "=0.5.0"
opentelemetry_sdk = "0.24.1"
tracing = "0.1.40"
tracing-opentelemetry = "0.25.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
